# DesignPatterns

Lab1/: AbstractShape.cpp  AbstractShape.h  CMakeLists.txt  Circle.cpp  Circle.h  CommandHandler.cpp  CommandHandler.h  IOManager.cpp  Rectangle.cpp  Rectangle.h  ShapesContainer.cpp  ShapesContainer.h  Triangle.cpp  Triangle.h  input.txt  main.cpp  output.txt
Lab3/: AbstractShape.cpp  AbstractShape.h  CMakeLists.txt  Circle.cpp  Circle.h  CircleFactory.cpp  CommandHandler.cpp  CommandHandler.h  IOManager.h  IShape.h  Rectangle.cpp  Rectangle.h  RectangleFactory.h  ShapesContainer.cpp  ShapesContainer.h  Triangle.cpp  Triangle.h  TriangleFactory.h
Lab5/: AbstractShape.cpp  AbstractShape.h  AreaVisitor.cpp  AreaVisitor.h  CMakeLists.txt  Circle.cpp  Circle.h  CircleFactory.h  CommandHandler.cpp  IFactory.h  IOManager.cpp  IShape.h  IVisitor.h  PerimeterVisitor.cpp  PerimeterVisitor.h  Rectangle.cpp  Rectangle.h  RectangleFactory.cpp  ShapesContainer.cpp  Triangle.cpp  Triangle.h  TriangleFactory.cpp  main.cpp  output.txt
